crates/hazard-analyzer/tests/snapshots/firmwares/with_multiple_devices.snap
---
source: tests/tests.rs
expression: manifest
---
- file: "./tests/firmwares/with_multiple_devices.rs"
  devices:
    - name: MethodsDevice
      position:
        - 15
        - 17
      mandatoryActions:
        - name: first_action
          hazards:
            - PowerOutage
          mandatoryHazards:
            - PowerOutage
        - name: second_action
          hazards:
            - FireHazard
            - SpoiledFood
          mandatoryHazards:
            - FireHazard
            - SpoiledFood
        - name: third_action
          hazards: []
          mandatoryHazards: []
      missingMandatoryActions: []
      optionalActions:
        - name: optional_action
          hazards: []
      allowedHazards:
        - FireHazard
        - PowerOutage
        - SpoiledFood
    - name: NewDevice
      position:
        - 2
        - 17
      mandatoryActions:
        - name: first_action
          hazards:
            - FireHazard
          mandatoryHazards:
            - FireHazard
        - name: second_action
          hazards:
            - ElectricEnergyConsumption
            - FireHazard
          mandatoryHazards:
            - ElectricEnergyConsumption
            - FireHazard
        - name: third_action
          hazards: []
          mandatoryHazards: []
      optionalActions:
        - name: optional_action
          hazards: []
      allowedHazards:
        - ElectricEnergyConsumption
        - FireHazard
