crates/hazard-analyzer/tests/snapshots/firmwares/with_new_device.snap
---
source: tests/tests.rs
expression: manifest
---
- file: "./tests/firmwares/with_new_device.rs"
  devices:
    - name: NewDevice
      position:
        - 2
        - 17
      mandatoryActions:
        - name: first_action
          hazards:
            - FireHazard
          mandatoryHazards:
            - FireHazard
        - name: second_action
          hazards:
            - ElectricEnergyConsumption
            - FireHazard
          mandatoryHazards:
            - ElectricEnergyConsumption
            - FireHazard
        - name: third_action
          hazards: []
          mandatoryHazards: []
      optionalActions:
        - name: optional_action
          hazards: []
      allowedHazards:
        - ElectricEnergyConsumption
        - FireHazard
